Add new API method `CurrenciesRead` at `/currencies` route
